# sqlalchemy-api-handler

./: .env  .gitignore  Dockerfile  MANIFEST.in  README.md  README.rst  celerybeat-schedule  docker-compose.yml  manager.py  pytest.ini  requirements-test.txt  requirements.txt  scheduler.py  setup.cfg  setup.py  sqlaah  sqlah  sqlam  test-requirements.txt  worker.py
.circleci/: config.yml
api/: .pylintrc  checkhealth.py  database.py  login_manager.py  setup.py
api/models/: __init__.py  activity.py  foo.py  offer.py  offer_tag.py  offerer.py  scope.py  stock.py  tag.py  task.py  thing_type.py  time_interval.py  user.py  user_offerer.py
api/tasks/: __init__.py  hello.py
api/utils/: celery.py  config.py  database.py  login_manager.py  setup.py
commands/: __init__.py  database.py  dehumanize.py  dev.py  filter.py  humanize.py  request.py
dockerfiles/flask/: Dockerfile
scripts/: configure.sh  utils.sh
sqlalchemy_api_handler/: __init__.py  activity.py  api_errors.py  api_handler.py
sqlalchemy_api_handler/bases/: accessor.py  activate.py  activator.py  add.py  check.py  delete.py  errors.py  modify.py  populate.py  save.py  soft_delete.py  tasker.py
sqlalchemy_handler/: __init__.py  accessor.py  api_errors.py  api_handler.py  as_dict.py  date.py  delete.py  errors.py  populate.py  save.py  serialize.py  soft_delete.py
sqlalchemy_manager/: __init__.py  as_dict.py  db.py  delete.py  errors.py  find_or_create.py  human_ids.py  populate.py  save.py  serialize.py  soft_delete.py
tests/: __init__.py  api_handler_test.py  conftest.py  save_test.py
(+79 files in other folders)
