[coverage:report]
omit =
    venv/*
    .circleci/*
    docker_data/*

[metadata]
license_file = LICENSE

[bdist_wheel]
universal = true

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    sqlalchemy_api_handler
    tests

[coverage:paths]
source =
    sqlalchemy_api_handler
